# Bandit-Driven-Ad-Optimization-System

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
configs/: default.yaml
src/bandit_ad_opt/: data_loader.py  main.py
src/bandit_ad_opt/bandits/: __init__.py  ucb.py
src/bandit_ad_opt/experiments/: compare.py  runner.py  simulate_thompson.py  simulate_ucb.py
src/bandit_ad_opt/models/: __init__.py  thompson.py
src/bandit_ad_opt/utils/: config.py  rewards.py
tests/: test_data_loader.py  test_model_thompson.py  test_model_ucb.py  test_model_ucp.py
